kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances-easy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:  
    - hosts:
      - api.finances-easy.com
      - finances-easy.com
      secretName: finances-tls
  rules:
  - host: api.finances-easy.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: finances-easy-api-svc
            port:
              number: 8089
  - host: finances-easy.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: finances-easy-web-svc
            port:
              number: 80
