kubernetes/ingress/monitor_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress
  namespace: kube-prometheus-stack
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:  
      - hosts:
        - grafana.finances-easy.com
        secretName: finances-tls
  rules:
  - host: grafana.finances-easy.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
